--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
   </div>
 
   <!-- 1. Write an <h1> tag that says "Sloths!" -->
+  <h1>Sloths!</h1>
 
   <!-- 2. Write a <p> tag that says "Sloths are the slowest animal in the world. Womp, womp." -->
+  <p> Sloths are the slowest animal in the world. Womp, womp.</p>
 
   <!-- 3. Finish early? Take a look at the two tags below. What do you think they do? How are they different other tags? -->
+  I think the bottom tah creates a link to a youtube video, and the other tag creates a link to a picture, the picture however is always visible without clicking on it, while the video is not.
 
   <a href="https://www.youtube.com/watch?v=DpV4k3Edr-I">Watch a video of sloths here 🦥</a>
   <img
